tests-extra/invalid/leak_outside_ref.stderr
error[E0597]: `outside_string` does not live long enough
  --> $DIR/leak_outside_ref.rs:22:15
   |
20 |       let _cell = NoCov::new("hi this is no good".into(), |owner| Dependent {
   |  _________________________________________________________-------_-
   | |                                                         |
   | |                                                         value captured here
21 | |         good: owner,
22 | |         bad: &outside_string,
   | |               ^^^^^^^^^^^^^^ borrowed value does not live long enough
23 | |     });
   | |_____- returning this value requires that `outside_string` is borrowed for `'static`
24 |   }
   |   - `outside_string` dropped here while still borrowed
